<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_addSP"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_anhSanPham"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/image_defaut" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="#03A9F4"
                        app:boxStrokeWidth="1.5dp"
                        app:hintTextColor="#03A9F4"
                        app:startIconDrawable="@drawable/ic_source">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_maSanPham"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/masp"
                            android:inputType="text"
                            android:textColor="#03A9F4" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="16dp"
                        app:boxStrokeColor="#03A9F4"
                        app:boxStrokeWidth="1.5dp"
                        app:endIconMode="clear_text"
                        app:hintTextColor="#03A9F4"
                        app:startIconDrawable="@drawable/ic_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_tenSanPham"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tensp"
                            android:inputType="text"
                            android:textColor="#03A9F4" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>


            <Spinner
                android:id="@+id/spn_HangSP"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="#EDEDED"
                android:paddingEnd="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_money">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_giaSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gia"
                    android:inputType="number"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tinhtrang"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rdg_tinhTrang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdo_cu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/cu"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/rdo_likeNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:text="@string/like_new_99"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/rdo_moi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:text="@string/moi"
                    android:textSize="17sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/trangthai"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rdg_TrangThai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdo_conhang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/conhang"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/rdo_hethang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:text="@string/hethanh"
                    android:textSize="17sp" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_memory">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_cpuSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpu"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_ram">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_ramSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ram"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_storage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_ocungSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ocung"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_hedieuhanh">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_heDHSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hdh"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_manhinh">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_manHinhSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/manhinh"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_cardmh">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_cardMHSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cardmh"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_pinSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_trongLuongSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trongluong"
                    android:inputType="numberDecimal"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:boxStrokeColor="#03A9F4"
                app:boxStrokeWidth="1.5dp"
                app:hintTextColor="#03A9F4"
                app:startIconDrawable="@drawable/ic_mota">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_moTaSP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mota"
                    android:inputType="text"
                    android:textColor="#03A9F4" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>